Development
	Add new widgets to source code, gmtk_media_player and gmtk_output_combo_box
	Fall back to using XScrnSaverSuspend if the call to Gnome SessionManager/ScreenSaver fails
	Make sure dbus_disable_screensaver is only called when video is present
	Apply desktop patch from Issue 481
	Run make indent
	Change glib detection back to 2.26
	When subtitles are hidden, set sub_forced_only to 1
	Change b/B change raise/lower subtitle position
	Use b/B to decrease/increase subtitle size while viewing
	Fix window resize issues with audio files and playlist
	Change glib 2.26 detection to 2.28 or higher
	Detect PulseAudio in configure, for future use
	Detect if we are using glib2 2.26 or higher
	Change icon from ipod to multimedia-player Issue #476
	Switch to using stock icons where possible 
	Add Russian entries to desktop file
	Set user agent to Mozilla/5.0 unless it is an apple.com site, then set it to the QuickTime value
	Added Ukranian translation
	Updated Portugese and Spanish translation
	Updated Korean translation from Byeongsik Jeon
	Adjust video and audio cache size minimum and incremental values
	Correct minor memory leak
	Bump QuickTime emulated version to 7.6.9
	Fix crash in File->Open TV->Analog TV when tried multiple times
	Run make indent
	Fix crash in File->Open TV->Analog TV
	My Windows mplayer doesn't have the export filter in it
	Detect and compile on Windows
	Code cleanup around optional components
	Work on tooltip flickering more, seems that when any tooltip is updated, the visible tooltip is
		redrawn. May be a bug in GTK, but another app I am working on does not have this issue
	Add configure option --with-dbus/--without-dbus so that gnome-mplayer can be compiled without dbus
	Added VDPAU to the list of devices that ok to fail 
		(found on Ubuntu mailing list, but never a bug opened or brought to my attention otherwise)
	Use keyboard key 'd' to toggle framedropping mode
	Run make indent on source
	Enable compile with --enable-gseal (GTK3 prep)